update DocCreatorMakeFont to be able to visualize and save non-latin characters

--- a/software/DocCreatorMakeFont/CMakeLists.txt
+++ b/software/DocCreatorMakeFont/CMakeLists.txt
@@ -18,6 +18,7 @@ SET( CMAKE_VERBOSE_MAKEFILE ON )
 SET(sources
   main.cpp
   MainWindow.cpp
+  CharacterWidget.cpp
   )
 
 SET( PROGNAME DocCreatorMakeFont )
