Store old fonts as binary.
Old fonts stored as binary are ten times smaller and load faster.
Add a new tool, convertOF, to convert between binary and xml old font format.
Add a unit test to check both old font formats save & load correctly.
Remove useless fields in characterdata.

--- a/software/DocCreator/application.ini.in
+++ b/software/DocCreator/application.ini.in
@@ -14,7 +14,7 @@ tessdataparentfolder=${Tesseract_TESSDATA_PARENT_DIR}
 xmlcheckerfolder=${XMLCHECKER_DIRECTORY}
 documentxsdchecker=document.xsd
 defaultfont=JulesVerne 
-defaultfontextension=.of
+defaultfontextension=.bof
 defaultbackground=vesale-01.png
 pagesizex=1260
 pagesizey=1782
