--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -21,6 +21,14 @@ IF(BUILD_OTHER_PROGS)
     IF(WIN32)
       INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
     ENDIF(WIN32)
+
+
+    ADD_EXECUTABLE(convertOF convertOF.cpp)
+    TARGET_LINK_LIBRARIES(convertOF DocCreatorFramework)
+    SET_TARGET_PROPERTIES(convertOF PROPERTIES CXX_STANDARD 11
+      CXX_STANDARD_REQUIRED YES
+      CXX_EXTENSIONS NO
+      )
     
 ENDIF()
 
