--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,11 @@ jobs:
             CIRCLE_WORKING_DIRECTORY=$(eval "echo $CIRCLE_WORKING_DIRECTORY")
             cd $CIRCLE_WORKING_DIRECTORY
             ls 
+            echo "ls /usr/local/opt/" && ls /usr/local/opt/
+            echo "ls /usr/local/opt/qt" && ls /usr/local/opt/qt
+            echo "ls /usr/local/opt/qt/lib/cmake" && ls /usr/local/opt/qt/lib/cmake
+            echo "ls /usr/local/Cellar/" && ls /usr/local/Cellar/
+            echo "ls /usr/local/Cellar/qt5" && ls /usr/local/Cellar/qt5
             mkdir build
             cd build
             cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON
