--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
           name: Install dependencies (OpenCV)
           command: |
             brew install cmake
+            brew install qt@5
+	    echo "brew --prefix qt" && brew --prefix qt
             brew install opencv
       - run:
           name: Clone repository
@@ -27,14 +29,11 @@ jobs:
             CIRCLE_WORKING_DIRECTORY=$(eval "echo $CIRCLE_WORKING_DIRECTORY")
             cd $CIRCLE_WORKING_DIRECTORY
             ls 
-            echo "ls /usr/local/opt/" && ls /usr/local/opt/
-            echo "ls /usr/local/opt/qt" && ls /usr/local/opt/qt
-            echo "ls /usr/local/opt/qt/lib/cmake" && ls /usr/local/opt/qt/lib/cmake
-            echo "ls /usr/local/Cellar/" && ls /usr/local/Cellar/
-            echo "ls /usr/local/Cellar/qt5" && ls /usr/local/Cellar/qt5
+            echo "ls /usr/local/opt/qt5" && ls /usr/local/opt/qt5
+            echo "ls /usr/local/opt/qt5/lib/cmake" && ls /usr/local/opt/qt5/lib/cmake
             mkdir build
             cd build
-            cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON
+            cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5
             make -j 4
             make test
 
