update JP2detection K for leptoni

--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -249,8 +249,8 @@ IF(BUILD_TESSERACT)
     ENDIF()
     pkg_check_modules(JP2K QUIET libopenjp2)
     IF(JP2K_FOUND)
-      #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
-      # message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${WEBP_LIBRARY} $JP2K_LIBRARIES=${WEBP_LIBRARIES} JP2K=${JP2K}")
+      SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
     ENDIF()
   ENDIF()
   if(NOT WEBP)
@@ -267,12 +267,12 @@ IF(BUILD_TESSERACT)
     find_path(JP2K_INCLUDE_DIR /openjpeg-2.3/openjpeg.h)
     find_library(JP2K_LIBRARY NAMES openjp2)
     if (JP2K_INCLUDE_DIR AND JP2K_LIBRARY)
-      # message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
+      message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
       set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
     endif()
   endif()
 
-  #message("OTHER_LIBS=${OTHER_LIBS}")
+  message("OTHER_LIBS=${OTHER_LIBS}")
     
   SET(Lept_LIBRARIES "${LEPTONICA_LIBRARY};${OTHER_LIBS}")
   SET(Tesseract_LIBRARIES ${TESSERACT_LIBRARY})
