--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,53 @@ if( OpenCV_FOUND )
   list( APPEND ThirdParty_LIBS ${OpenCV_LIBS} )
 endif( OpenCV_FOUND )
 
+#DEBUG !!!!!!!!!!!!!!!!!
 
+  FIND_PACKAGE(PkgConfig QUIET)
+  IF (PKG_CONFIG_FOUND)
+    #message("search with pkg config")
+    pkg_check_modules(WEBP QUIET libwebp)
+    IF(WEBP_FOUND)
+      #SET(OTHER_LIBS "${WEBP_LIBRARIES};${OTHER_LIBS}")
+      message("WEBP_FOUND=${WEBP_FOUND} by pkg: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
+    ENDIF()
+    pkg_check_modules(JP2K QUIET libopenjp2)
+    IF(JP2K_FOUND)
+      SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARY_DIRS=${JP2K_LIBRARY_DIRS} $JP2K_LIBDIR=${JP2K_LIBDIR} $JP2K_LIBRARIES=${JP2K_LIBRARIES} $JP2K_LINK_LIBRARIES=${JP2K_LINK_LIBRARIES} JP2K=${JP2K} JP2K_LDFLAGS=${JP2K_LDFLAGS} JP2K_LDFLAGS_OTHER=${JP2K_LDFLAGS_OTHER}")
+      IF (NOT JP2K_LIBRARIES)
+	find_library(JP2K_LIBRARY NAMES openjp2)
+	if (JP2K_LIBRARY)
+	  message("JP2K_FOUNDb=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
+	  set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
+
+	  cmake_print_properties(TARGETS openjp2 PROPERTIES
+                       LOCATION INTERFACE_INCLUDE_DIRS INTERFACE_LINK_LIBRARIES)
+
+	endif()
+      ENDIF()
+    ENDIF()
+  ENDIF()
+  if(NOT WEBP)
+    #message("search webp directly")
+    find_path(WEBP_INCLUDE_DIR /webp/decode.h)
+    find_library(WEBP_LIBRARY NAMES webp)
+    if (WEBP_INCLUDE_DIR AND WEBP_LIBRARY)
+      # message("WEBP_FOUND2=${WEBP_FOUND}: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
+      set(OTHER_LIBS "${WEBP_LIBRARY};${OTHER_LIBS}")
+    endif()
+  endif()
+  if(NOT JP2K)
+    #message("search jp2k directly")
+    find_path(JP2K_INCLUDE_DIR /openjpeg-2.3/openjpeg.h)
+    find_library(JP2K_LIBRARY NAMES openjp2)
+    if (JP2K_INCLUDE_DIR AND JP2K_LIBRARY)
+      message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
+      set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
+    endif()
+  endif()
+
+#DEBUG end !!!!!!!!!!!!!!!!!!
 
 OPTION(BUILD_OTHER_PROGS "Build other programs than DocCreator" OFF)
 if (NOT BUILD_OTHER_PROGS)
