--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -249,7 +249,8 @@ IF(BUILD_TESSERACT)
     ENDIF()
     pkg_check_modules(JP2K QUIET libopenjp2)
     IF(JP2K_FOUND)
-      SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      SET(OTHER_LIBS "${JP2K_LINK_LIBRARIES};${OTHER_LIBS}") #circleci 22/04/2022
       message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
     ENDIF()
   ENDIF()
