correctly find openjp2 on circleci/macos

--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -245,12 +245,13 @@ IF(BUILD_TESSERACT)
     pkg_check_modules(WEBP QUIET libwebp)
     IF(WEBP_FOUND)
       #SET(OTHER_LIBS "${WEBP_LIBRARIES};${OTHER_LIBS}")
-      message("WEBP_FOUND=${WEBP_FOUND} by pkg: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
+      #message("WEBP_FOUND=${WEBP_FOUND} by pkg: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
     ENDIF()
     pkg_check_modules(JP2K QUIET libopenjp2)
     IF(JP2K_FOUND)
-      #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
       # message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${WEBP_LIBRARY} $JP2K_LIBRARIES=${WEBP_LIBRARIES} JP2K=${JP2K}")
+      #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      SET(OTHER_LIBS "${JP2K_LINK_LIBRARIES};${OTHER_LIBS}") #circleci/macos 22/04/2022
     ENDIF()
   ENDIF()
   if(NOT WEBP)
